--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
@@ -60,5 +60,10 @@
         if (document.getElementsByName("rate") != null) {
             getRate();
         }
+
+        if (document.getElementById("MenuMethod") != null) {
+            payment();
+            method(0);
+        }
     }
  </script>
