update top header link

--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/MenuUserPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/MenuUserPartial.cshtml
@@ -15,25 +15,25 @@
         </div>
         <ul class="dashboard-menu">
             <li>
-                <a href="dashboard.html"><i class="flaticon-dashboard"></i>Dashboard</a>
+                <a href="dashboard" class="active"><i class="flaticon-dashboard"></i>Dashboard</a>
             </li>
             <li>
-                <a href="#0" class="active"><i class="flaticon-settings"></i>Personal Profile </a>
+                <a href="UserProfile"><i class="flaticon-settings"></i>Personal Profile </a>
             </li>
             <li>
-                <a href="my-bid.html"><i class="flaticon-auction"></i>My Bids</a>
+                <a href="MyBid"><i class="flaticon-auction"></i>My Bids</a>
             </li>
             <li>
-                <a href="winning-bids.html"><i class="flaticon-best-seller"></i>Winning Bids</a>
+                <a href="WinningBid"><i class="flaticon-best-seller"></i>Winning Bids</a>
             </li>
             <li>
-                <a href="notifications.html"><i class="flaticon-alarm"></i>My Alerts</a>
+                <a href="MyAlerts"><i class="flaticon-alarm"></i>My Alerts</a>
             </li>
             <li>
-                <a href="my-favorites.html"><i class="flaticon-star"></i>My Favorites</a>
+                <a href="MyFavorite"><i class="flaticon-star"></i>My Favorites</a>
             </li>
             <li>
-                <a href="referral.html"><i class="flaticon-shake-hand"></i>Referrals</a>
+                <a href="Referral"><i class="flaticon-shake-hand"></i>Referrals</a>
             </li>
         </ul>
     </div>
