--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeaderTopPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeaderTopPartial.cshtml
@@ -70,72 +70,13 @@
                         <a href="/Index/auction">Auction</a>
                     </li>
                     <li>
-                        <a href="#0">Pages</a>
-                        <ul class="submenu">
-                            <li>
-                                <a href="#0">Product</a>
-                                <ul class="submenu">
-                                    <li>
-                                        <a href="product.html">Product Page 1</a>
-                                    </li>
-                                    <li>
-                                        <a href="product-2.html">Product Page 2</a>
-                                    </li>
-                                    <li>
-                                        <a href="product-details.html">Product Details</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#0">My Account</a>
-                                <ul class="submenu">
-                                    <li>
-                                        <a href="sign-up.html">Sign Up</a>
-                                    </li>
-                                    <li>
-                                        <a href="sign-in.html">Sign In</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#0">Dashboard</a>
-                                <ul class="submenu">
-                                    <li>
-                                        <a href="dashboard.html">Dashboard</a>
-                                    </li>
-                                    <li>
-                                        <a href="profile.html">Personal Profile</a>
-                                    </li>
-                                    <li>
-                                        <a href="my-bid.html">My Bids</a>
-                                    </li>
-                                    <li>
-                                        <a href="winning-bids.html">Winning Bids</a>
-                                    </li>
-                                    <li>
-                                        <a href="notifications.html">My Alert</a>
-                                    </li>
-                                    <li>
-                                        <a href="my-favorites.html">My Favorites</a>
-                                    </li>
-                                    <li>
-                                        <a href="referral.html">Referrals</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="about.html">About Us</a>
-                            </li>
-                            <li>
-                                <a href="faqs.html">Faqs</a>
-                            </li>
-                            <li>
-                                <a href="error.html">404 Error</a>
-                            </li>
-                        </ul>
+                        <a href="DashBoard">My Account</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="AboutUs">AboutUs</a>
+                    </li>
+                    <li>
+                        <a href="ContactUs">Contact</a>
                     </li>
                 </ul>
                 <form class="search-form">
