--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
@@ -12,11 +12,11 @@
 <script src="~/assetsIndex/js/yscountdown.min.js"></script>
 <script src="~/assetsIndex/js/jquery-ui.min.js"></script>
 <script src="~/assetsIndex/js/main.js"></script>
-<script src="~/assetsIndex/js/lightbox-plus-jquery.min.js"></script>
+<script src="/assetsIndex/js/lightbox-plus-jquery.min.js"></script>
 <script>
     window.onload = function () {
         var amount = document.getElementById("Amount");
-       
+
         if (localStorage.getItem("amount") == null) {
             amount.innerHTML = "0";
         }
@@ -66,4 +66,4 @@
             method(0);
         }
     }
- </script>
+</script>
