--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ArtworkDetail.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ArtworkDetail.cshtml
@@ -203,6 +203,33 @@
                     <div class="header-area">
                         <h3 class="title">@Artwork.Name</h3>
                         <p>@Artwork.Description</p>
+                        <div class="item">
+                            <h5 class="subtitle">Buyer Responsibility</h5>
+                            <p>
+                                The BUYER will receive an email notification from PropertyRoom.com following the
+                                close of an auction. After fraud verification and payment settlement, we will email
+                                the BUYER instructions for retrieving the ASSET from the Will-Call Location listed
+                                above.
+                            </p>
+                            <p>
+                                All applicable shipping, logistics, transportation, customs, fees, taxes,
+                                export/import activities and all associated costs are the sole responsibility of the
+                                BUYER. No shipping, customs, export or import assistance is available from Sbidu.
+                            </p>
+                            <p>
+                                When applicable for a given ASSET, BUYER bears responsibility for determining motor
+                                vehicle registration requirements in the applicable jurisdiction as well as costs,
+                                including any fees, registration fees, taxes, etc., owed as a result of BUYER
+                                registering an ASSET; for example, BUYER bears sole responsibility for all
+                                title/registration/smog and other such fees.
+                            </p>
+                            <p>
+                                BUYER is responsible for all storage fees at time of pick-up. See above under
+                                IMPORTANT PICK-UP TIMES for specific requirements for this asset, but generally
+                                assets must be picked up within 2 business days of payment otherwise additional
+                                storage fees will be applied.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
