--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Auction.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Auction.cshtml
@@ -109,7 +109,7 @@
                                 <span class="total-bids">30 Bids</span>
                             </div>
                             <div class="text-center">
-                                <a href="#0" class="custom-button">Submit a bid</a>
+                                <a href="/Index/auctiondetail?auctionId=@item.Id" class="custom-button">Submit a bid</a>
                             </div>
                         </div>
                     </div>
