--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Gallery.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Gallery.cshtml
@@ -51,7 +51,7 @@
         {
             <div class="columnArt">
                 <div class="content">
-                    <a href="/Index/artworkdetail?id=@item.Id" data-lightbox="mygallery"><img src="~/assets/img/artwork/@item.Image" alt=""></a>
+                    <a data-lightbox="mygallery"><img src="~/assets/img/artwork/@item.Image" alt=""></a>
                     <h4>@item.Name</h4>
                     <b>@item.Artist.Name</b>
                     <h5>$@item.DefautPrice</h5>
